--- a/keptn/keptn-predeployment_productcatalogserice.yaml
+++ b/keptn/keptn-predeployment_productcatalogserice.yaml
@@ -9,4 +9,4 @@ spec:
     parameters:
       map:
         host: opentelemetry-demo-productcatalogservice
-        istio: true
+        istio: "true"
